Alignment Issue

--- a/HTML-CSS_Projects/Project 02/style.css
+++ b/HTML-CSS_Projects/Project 02/style.css
@@ -1,124 +1,109 @@
+* {
 
-
-
-*{
-
+    margin: 0;
     padding: 0;
-    margin: auto;
-    box-sizing: border-box;
-    background: #000;
-    color: white;
-    font-family: 'Montserrat';
-}
-
-
-.container{
-
+    font-family: "Montserrat";
 
 }
 
-.navbar{
+body {
+    background-color: #000101;
+}
+
+
+
+/* navbar styling */
+.navbar {
+
     display: flex;
-    margin-top: 30px;
-    margin-bottom: 30px;
-    /* padding-top: 20px;
-    padding-bottom: 20px;
-    justify-content: flex-start;
+    margin: 20px 40px;
     align-items: center;
-     */
-}
 
-.line{
-    border-right:2px solid white ;
-    margin: 15px;
-    margin-left: 30px;
+
 }
 
 
-.navbar img{
-    
-   
-    width: 90px;
-}
 
-.list{
-    list-style-type: none;
+
+.list {
+    color: #FEFEFF;
     display: flex;
-    flex-wrap: wrap;
-   
-    gap: 19px;
+    list-style-type: none;
+    gap: 65px;
+    margin: 0 170px;
 }
 
-.list li:first-child{
-    display: none;
+.navbar img {
+    width: 80px;
+    position: relative;
+    top: 2px;
 }
 
-.button-small{
-    background-color: #BB2CD9;
+.line {
+    border-left: 1px solid #FEFEFF;
+    height: 50px;
+    position: relative;
+    left: 80px;
+}
+
+.button-small {
+
+    background-color: #BA0DC4;
+    color: #FEFEFF;
     border: 0;
     padding: 10px 20px;
-    border-radius: 7px;
-
+    text-align: center;
+    border-radius: 5px;
 }
 
-.hero{
-    background-image: url(./assets/bg.png);
+
+.hero {
+    color: #FEFEFF;
     height: 100vh;
-    background-size:100% 100%;
+    background-image: url(./assets/bg.png);
+    background-size: 100% 100%;
     background-repeat: no-repeat;
-    /* background-color: initial; */
+
+}
+
+.hero-heading {
+
+    
+
+    font-size: 70px;
+    padding-top: 120px;
+    padding-left: 320px;
+    padding-right: 50px;
+
+
 }
 
 
-.hero-heading{
+
+
+.hero-description {
+
+    font-weight: 100;
+    display: flex;
+    justify-content: center;
+    padding-top: 40px;
+    /* align-items: center; */
+
+
+}
+
+
+
+.button-large {
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: initial;
-    padding-top: 90px;
-    font-size: 60px;
-    padding-top: 110px;
-    text-align: center;
-    justify-content: center;
-    padding-right: 54px;
-    margin-left: 300px;
-    margin-right: 400px;
-}
-
-.hero-description{
-    background-color: initial;
-    text-align: center;
-    justify-content: center;
-    font-size: 19px;
-    margin-right:140px;
-    padding-top: 10px;
-}
-
-
-.hero-heading{
-    margin-left: 23%;
-}
-.hero-description{
-    margin-left: 5%;
-}
-
-.button-large{
-    display: flex;
-    background-color: initial;
-    background-color: #BB2CD9;
-    text-align: center;
-    justify-content: center;
-    padding: 15px 20px;
-    border:0;
-    border-radius: 5px;
-    margin-top: 20px;
-    
+    color: #FEFEFF;
+    background-color: #BA0DC4;
+    padding: 20px;
+    font-size: 20px;
+    border: 0px;
+    margin-left: 450px;
+    margin-top: 40px;
     
 }
-
-
-
-/*
-
-Well Done Ramu
-*/
